fix : aligned badges on the icons.

--- a/Badges/badges.css
+++ b/Badges/badges.css
@@ -36,8 +36,8 @@
   background-color: var(--primary-color);
   color: white;
   position: relative;
-  bottom: 2.5rem;
-  right: 1.5rem;
+  bottom: 2.2rem;
+  right: 1.6rem;
 }
 
 .cart-img {
@@ -51,8 +51,8 @@
   background-color: var(--primary-color);
   color: white;
   position: relative;
-  bottom: 2rem;
-  right: 0.2rem;
+  bottom: 1.3rem;
+  right: 0.5rem;
 }
 
 .badge-over-text {
@@ -61,8 +61,8 @@
 
 .badge {
   position: relative;
-  bottom: 1.4rem;
-  right: 0.3rem;
+  bottom: 1rem;
+  right: 0.5rem;
   background-color: var(--primary-color);
   color: var(--text-color);
   padding: 3px 9px;
@@ -74,10 +74,9 @@
 }
 
 .large-badge {
-  padding: 0.3rem 0.8rem;
+  padding: 0.1rem 0.5rem;
   font-size: 1.5rem;
   border-radius: 50%;
-  bottom: 1.8rem;
 }
 
 .badge-btn {
@@ -90,7 +89,7 @@
 }
 
 .badge-on-btn {
-  bottom: 2rem;
-  right: 0.7rem;
+  bottom: 1.6rem;
+  right: 0.9rem;
   background-color: var(--primary-color);
 }
